add AJAX to toggle show-hide of each product on index page.

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -2,17 +2,27 @@
 
 <div class="row">
   <div class="section">
-  <% @products.each do |product| %>
-    <div class="col s4">
-      <h4><%= product.name %></h4>
-      <p><%= product.description %></p>
-      <p><%= number_to_currency product.price %></p>
-      <%= form_for @order_item, remote: true do |f| %>
-        <%= f.hidden_field :product_id, value: product.id %>
-        <%= f.number_field :quantity, placeholder: "add quantity" %>
-        <span class="waves-effect waves-light btn"><%= f.submit "Add to cart" %></span>
-      <% end %>
-    </div>
-  <% end %>
-</div>
+    <% @products.each do |product| %>
+      <div class="col s4">
+        <div id= "product-show-<%= product.id %>">
+          <%= link_to product_path(product), remote: true do %>
+            <h5><%= product.name %></h5>
+            $<%= product.price %>
+          <% end %>
+        </div>
+        <div class="product-hide" id= "product-hide-<%= product.id %>">
+          <%= link_to product_path(product), remote: true do %>
+            <h5><%= product.name %></h5>
+            $<%= product.price %>
+            <p>Description: <%= product.description %></p>
+          <% end %>
+        </div>
+        <%= form_for @order_item, remote: true do |f| %>
+          <%= f.hidden_field :product_id, value: product.id %>
+          <%= f.number_field :quantity, placeholder: "add quantity" %>
+          <span class="waves-effect waves-light btn"><%= f.submit "Add to cart" %></span>
+        <% end %>
+      </div>
+    <% end %>
+  </div>
 </div>
