--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,9 @@
   <nav>
     <div class="nav-wrapper">
       <ul id="nav-mobile" class="right hide-on-med-and-down">
+        <% if current_user && current_user.admin %>
+          <li><%= link_to "Add Product", new_product_path %></li>
+        <% end %>
         <li><%= link_to "See all products", products_path %></li>
         <li>
           <%= link_to cart_path do %>
