--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,9 +11,9 @@
     <div class="nav-wrapper">
       <ul id="nav-mobile" class="right hide-on-med-and-down">
         <% if current_user && current_user.admin %>
-          <li><%= link_to "Add Product", new_product_path %></li>
+          <li><%= link_to "Add product", new_product_path %></li>
         <% end %>
-        <li><%= link_to "See all products", products_path %></li>
+        <li><%= link_to "Show products", products_path %></li>
         <li>
           <%= link_to cart_path do %>
             Cart | Total items: <span class="cart-items"><%= cart_items %></span>
