--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,6 +1,7 @@
 <h1>Edit Product</h1>
 
-<%= form_for @product do |f| %>
+<%= form_for @product, html: { multipart: true } do |f| %>
+  Image: <%= f.file_field :product_img %>
   Name: <%= f.text_field :name %>
   Description: <%= f.text_field :description %>
   Price: <%= f.number_field :price %>
