--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -4,7 +4,7 @@
   Image: <%= f.file_field :product_img %>
   Name: <%= f.text_field :name %>
   Description: <%= f.text_field :description %>
-  Price: <%= f.number_field :price %>
+  Price: <%= f.text_field :price %>
   <%= f.submit "Submit" %>
 <% end %>
 
