--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -5,7 +5,7 @@
   Name: <%= f.text_field :name %>
   Description: <%= f.text_field :description %>
   Price: <%= f.text_field :price %>
-  <%= f.submit "Submit" %>
+  <span class="waves-effect waves-light btn"><%= f.submit "Submit" %></span>
 <% end %>
 
 <p><%= link_to "Return to product", product_path %></p>
