--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -5,5 +5,5 @@
   Name: <%= f.text_field :name %>
   Description: <%= f.text_field :description %>
   Price: <%= f.text_field :price %>
-  <%= f.submit "Submit" %>
+  <span class="waves-effect waves-light btn"><%= f.submit "Submit" %></span>
 <% end %>
