--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,37 +1,28 @@
-<h3>Products</h3>
+<h2>Products</h2>
 
 <div class="row">
   <div class="section">
     <% @products.each do |product| %>
       <div class="col s4 product-height">
         <div id= "product-show-<%= product.id %>">
-          <div>
-            <small>
-              <% if current_user && current_user.admin %>
-              <%= link_to "admin access", product_path(product) %>
-              <% end %>
-            </small>
-          </div>
+
           <%= link_to product_path(product), remote: true do %>
-            <h5><%= product.name %></h5>
+            <h4><b><%= product.name %></b></h4>
             <%= image_tag product.product_img.url(:product_index) %>
 
           <% end %>
         </div>
         <div class="product-hide" id= "product-hide-<%= product.id %>">
-          <div>
-            <small>
-              <% if current_user && current_user.admin %>
-              <%= link_to "admin access", product_path(product) %>
-              <% end %>
-            </small>
-          </div>
+      
           <%= link_to product_path(product), remote: true do %>
-            <h5><%= product.name %></h5>
-            <%= image_tag product.product_img.url(:product_index) %>
-            <p><%= number_to_currency product.price %></p>
-            <p>Description: <%= product.description %></p>
-
+            <h4><%= product.name %></h4>
+            <div><%= image_tag product.product_img.url(:product_index) %></div>
+            <p>
+              <b>Description:</b> <%= product.description %>
+            </p>
+            <p>
+              <b>Price:</b> <%= number_to_currency product.price %>
+            </p>
           <% end %>
         </div>
         <%= form_for @order_item, remote: true do |f| %>
@@ -39,6 +30,13 @@
           <div><%= f.number_field :quantity, placeholder: "quantity:" %>
           <span class="waves-effect waves-light btn"><%= f.submit "Add to cart" %></span></div>
         <% end %>
+        <div>
+          <small>
+            <% if current_user && current_user.admin %>
+            <%= link_to "admin access", product_path(product) %>
+            <% end %>
+          </small>
+        </div>
       </div>
     <% end %>
   </div>
