--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,17 +10,17 @@
   <nav>
     <div class="nav-wrapper">
       <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <% if current_user && current_user.admin %>
-          <li><%= link_to "Add product", new_product_path %></li>
-        <% end %>
-        <li><%= link_to "Show products", products_path %></li>
+        <li><%= link_to "Products", products_path %></li>
         <li>
           <%= link_to cart_path do %>
             Cart | Total items: <span class="cart-items"><%= cart_items %></span>
           <% end %>
         </li>
+        <% if current_user && current_user.admin %>
+          <li><%= link_to "Add product", new_product_path %></li>
+        <% end %>
         <% if current_user %>
-          <li><%= current_user.email %></li>
+          <li><%= current_user.name %></li>
           <li><%= link_to "Sign out", '/sign_out' %></li>
         <% else %>
           <li><%= link_to "Sign up", 'sign_up' %></li>
