--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,9 +1,12 @@
-<h1>Add a product.</h1>
+<h3>Add Product</h3>
+<br>
 
 <%= form_for @product, url: products_path, html: { multipart: true } do |f| %>
-  Image: <%= f.file_field :product_img %>
-  Name: <%= f.text_field :name %>
-  Description: <%= f.text_field :description %>
-  Price: <%= f.text_field :price %>
+  <h5>Name: <%= f.text_field :name %></h5>
+  <p>Description: <%= f.text_field :description %></p>
+  <p>Price: <%= f.text_field :price %></p>
+  <p>Image: <%= f.file_field :product_img %></p>
   <span class="waves-effect waves-light btn"><%= f.submit "Submit" %></span>
 <% end %>
+
+<p><%= link_to "Return to home", products_path %></p>
