--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,10 +1,11 @@
-<h2><%=@product.name%></h2>
-<p><%=image_tag @product.product_img.url(:product_show)%></p>
-<p><%=number_to_currency @product.price%></p>
-<p><%=@product.description%></p>
-
+<h3><%=@product.name%></h3>
+<p><b>Image:</b> <%=image_tag @product.product_img.url(:product_show)%></p>
+<p><b>Description:</b> <%=@product.description%></p>
+<p><b>Price:</b> <%=number_to_currency @product.price%></p>
 
 <% if current_user && current_user.admin %>
-  <%= link_to "Edit", edit_product_path(@product) %>
-  <%= link_to "Delete", product_path(@product), method: :delete, data: { confirm: "Are you sure?" } %>
+    <%= link_to "Edit", edit_product_path(@product) %>
+    <%= link_to "Delete", product_path(@product), method: :delete, data: { confirm: "Are you sure?" } %>
 <% end %>
+
+<p><%= link_to "Return to home", products_path %></p>
